wordpress/templates/middle-ware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-wordpress
spec:
  stripPrefix:
    prefixes:
      - /wordpress
